# wizmusic

./: .gitignore  README.md  pyproject.toml
wizmusic/: client.py  player.py  utils.py  wiz.py
